# sc2-cpp-api

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  README_8md.html  dir_000005_000002.html  dir_000007_000002.html  dir_04f2ecc425faf0d475a3caf484e551f3.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_9b1ced676d335869719a7bfb99e201c3.html  dir_9b1ced676d335869719a7bfb99e201c3.js  dir_b4ceceabb245eb767072b7b3b03e5e7d.html  dir_b4ceceabb245eb767072b7b3b03e5e7d.js  dir_b4ceceabb245eb767072b7b3b03e5e7d_dep.map  dir_b4ceceabb245eb767072b7b3b03e5e7d_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e68e8157741866f444e17edd764ebbae.html  dir_f00a88bf98fc5f31d0a22915697932fb.html  dir_f00a88bf98fc5f31d0a22915697932fb.js  dir_f00a88bf98fc5f31d0a22915697932fb_dep.map  dir_f00a88bf98fc5f31d0a22915697932fb_dep.md5  files.html  files_dup.js  globals.html  globals_func.html  graph_legend.html  index.html  (+26 more)
.docker/: Dockerfile  devcontainer.json
.ubuntu/: bootstrap.sh
cmake/: options.cmake
doc/doxygen/: mainpage.md
include/temp/: temp.hpp
include/util/: option.hpp
search/: all_1.js  all_2.js  all_4.js  files_0.js  files_2.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  searchdata.js
src/: CMakeLists.txt
src/temp/: CMakeLists.txt  temp.cpp  temp_main.cpp
src/util/: CMakeLists.txt  options.cpp
test/: CMakeLists.txt
test/temp/: CMakeLists.txt  test_temp.cpp
test/util/: CMakeLists.txt  test_options.cpp
